# juliaset

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh
src/app/: Window.cpp  Window.h  main.cpp
src/app/shaders/: fragment.glsl  vertex.glsl
src/base/: Engine.cpp  Engine.h  GLWidget.cpp  GLWidget.h
